[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-output-store"
version = "0.1.0"
description = "Thread-safe JSONL artifact store for agent run outputs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["agent", "artifacts", "store", "jsonl", "logging"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-output-store"
Repository = "https://github.com/MukundaKatta/agent-output-store"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_output_store = ["py.typed"]
